Models updated, API for signup and get userdetails added

--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  <add key="Server" value="localhost"/>
-	  <add key="Database" value="api_data"/>
+	  <add key="Database" value="isa_nepal"/>
 	  <add key="Username" value="root"/>
 	  <add key="Password" value="Database"/>
   </appSettings>
