--- a/WebAPI.csproj
+++ b/WebAPI.csproj
@@ -211,8 +211,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Account.cs" />
-    <Compile Include="Models\DatabaseConnection.cs" />
+    <Compile Include="Models\LoginRequestModel.cs" />
+    <Compile Include="Models\ResponseModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\DatabaseConnectionModel.cs" />
+    <Compile Include="Models\UserResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
