--- a/WebAPI.csproj
+++ b/WebAPI.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Controllers\CourtBookingController.cs" />
     <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\TraininBookingController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -225,7 +226,7 @@
     <Compile Include="Models\TrainingBookingRequestModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\DatabaseConnectionModel.cs" />
-    <Compile Include="Models\UserResponseModel.cs" />
+    <Compile Include="Models\UserProfileModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
